--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -3,11 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/coordinator"
-    tools:context="com.example.titomi.workertrackerloginmodule.report_module.ReportActivity"
     android:orientation="vertical"
+    tools:context="com.example.titomi.workertrackerloginmodule.report_module.ReportActivity"
     >
 
 
@@ -19,10 +19,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="5dp"
             android:descendantFocusability="beforeDescendants"
-            android:focusableInTouchMode="true">
+            android:focusableInTouchMode="true"
+            android:orientation="vertical"
+            android:padding="5dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -39,8 +39,9 @@
                 android:layout_marginBottom="10dp"
                 android:editable="false"
                 android:inputType="none"
+                android:labelFor="@+id/taskType"
                  />
-
+            `
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -54,8 +55,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:inputType="none"
                 android:editable="false"
+                android:inputType="none"
 
                 android:singleLine="true" />
 
@@ -72,9 +73,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                android:editable="false"
                 android:inputType="none"
-                android:singleLine="true"
-                android:editable="false"/>
+                android:singleLine="true" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -89,9 +90,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                android:editable="false"
                 android:inputType="none"
-                android:singleLine="true"
-                android:editable="false"/>
+                android:singleLine="true" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -115,9 +116,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:inputType=""
-                android:enabled="false"
                 android:editable="false"
+                android:enabled="false"
+                android:inputType=""
 
                 android:singleLine="true" />
 
@@ -134,20 +135,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                android:editable="false"
                 android:inputType="none"
-                android:singleLine="true"
-                android:editable="false"/>
+                android:singleLine="true" />
 
 
             <GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:columnCount="3"
-                android:rowCount="2"
+                android:layout_marginBottom="10dp"
                 android:alignmentMode="alignBounds"
+                android:columnCount="3"
 
-                android:useDefaultMargins="true"
-                android:layout_marginBottom="10dp">
+                android:rowCount="2"
+                android:useDefaultMargins="true">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -157,9 +158,9 @@
                     android:textSize="12sp"
                     />
                 <ProgressBar
+                    android:id="@+id/lgaLoading"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:id="@+id/lgaLoading"
 
                     android:visibility="invisible"
                     />
@@ -175,17 +176,17 @@
                     android:id="@+id/state"
                     android:layout_width="130dp"
                     android:layout_height="wrap_content"
-                    android:inputType="none"
-                    android:gravity="center"
                     android:editable="false"
+                    android:gravity="center"
+                    android:inputType="none"
 
                     />
 
 
                 <TextView
+                    android:id="@+id/view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/view"
                     android:text=""
                     android:visibility="invisible"
                     />
@@ -195,9 +196,9 @@
                     android:id="@+id/lga"
                     android:layout_width="130dp"
                     android:layout_height="wrap_content"
-                    android:inputType="none"
                     android:editable="false"
                     android:gravity="center"
+                    android:inputType="none"
 
                     />
 
@@ -218,9 +219,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                android:editable="false"
                 android:inputType="none"
-                android:singleLine="true"
-                android:editable="false"/>
+                android:singleLine="true" />
 
 
             <TextView
@@ -236,8 +237,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:inputType="none"
                 android:editable="false"
+                android:inputType="none"
                 android:singleLine="true" />
 
 
@@ -255,49 +256,49 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:inputType="none"
                 android:editable="false"
+                android:inputType="none"
                 android:singleLine="true" />
 
             <GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:rowCount="2"
-                android:columnCount="2"
+                android:layout_marginBottom="20dp"
                 android:alignmentMode="alignBounds"
-                android:layout_marginBottom="20dp">
+                android:columnCount="2"
+                android:rowCount="2">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
+                    android:layout_gravity="top|start"
                     android:text="Date assigned:"
                     android:textColor="@color/black"
-                    android:textSize="12sp"
 
 
-                    android:layout_gravity="top|start"/>
+                    android:textSize="12sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
+                    android:layout_gravity="top|center"
                     android:text="Time:"
                     android:textColor="@color/black"
-                    android:textSize="12sp"
-                    android:layout_gravity="top|center"/>
+                    android:textSize="12sp" />
 
                 <EditText
                     android:id="@+id/dateText"
                     android:layout_width="130dp"
                     android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
+                    android:layout_gravity="bottom|start"
                     android:drawableEnd="@android:drawable/arrow_down_float"
-                    android:hint="@string/date_format"
                     android:editable="false"
                     android:focusable="false"
-                    android:inputType="none"
-                    android:layout_gravity="bottom|start"/>
+                    android:gravity="center_horizontal"
+                    android:hint="@string/date_format"
+                    android:inputType="none" />
 
 
 
@@ -306,14 +307,14 @@
                     android:layout_width="130dp"
                     android:layout_height="wrap_content"
 
+                    android:layout_gravity="center|bottom"
                     android:drawableEnd="@android:drawable/arrow_down_float"
                     android:editable="false"
+                    android:focusable="false"
                     android:gravity="center_horizontal"
                     android:hint="@string/date_format"
-                    android:focusable="false"
-                    android:inputType="none"
 
-                    android:layout_gravity="center|bottom"/>
+                    android:inputType="none" />
 
             </GridLayout>
 
@@ -321,9 +322,9 @@
             <GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:rowCount="2"
+                android:alignmentMode="alignBounds"
                 android:columnCount="2"
-                android:alignmentMode="alignBounds">
+                android:rowCount="2">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -335,30 +336,30 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="top|end"
                     android:layout_marginBottom="10dp"
                     android:text="Quantity distributed/sold"
-                    android:textColor="@color/black"
 
-                    android:textSize="12sp"
-                    android:layout_gravity="top|end"/>
+                    android:textColor="@color/black"
+                    android:textSize="12sp" />
 
                 <EditText
                     android:id="@+id/participantsEdit"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:inputType="number"
                     android:gravity="center_horizontal"
+                    android:inputType="number"
                     android:singleLine="true" />
 
                 <EditText
                     android:id="@+id/quantityDistributedEdit"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:inputType="number"
-                    android:gravity="center_horizontal"
                     android:layout_gravity="bottom|end"
+                    android:layout_marginBottom="10dp"
+                    android:gravity="center_horizontal"
+                    android:inputType="number"
                     android:singleLine="true" />
             </GridLayout>
 
@@ -383,39 +384,39 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/line"
                 android:text="Media (Click on the + button to add media)"
                 android:textColor="@color/black"
-                android:textSize="12sp"
-                android:background="@drawable/line"/>
+                android:textSize="12sp" />
 
             <LinearLayout
+                android:id="@+id/mediaLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:id="@+id/mediaLayout">
+                android:orientation="vertical">
             <HorizontalScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <LinearLayout
+                    android:id="@+id/imagesLayout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:id="@+id/imagesLayout"/>
+                    android:orientation="horizontal" />
 
 
             </HorizontalScrollView>
 
 
                 <TextView
+                    android:id="@+id/playVideoText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Play video"
-                    android:drawableStart="@drawable/ic_videocam_white_24dp"
-                    android:background="@color/gray"
-                    android:gravity="center_vertical"
-                    android:id="@+id/playVideoText"
-                    android:textColor="@color/black"
                     android:layout_marginTop="20dp"
+                    android:background="@color/gray"
+                    android:drawableStart="@drawable/ic_videocam_white_24dp"
+                    android:gravity="center_vertical"
+                    android:text="Play video"
+                    android:textColor="@color/black"
                     android:visibility="gone"/>
             </LinearLayout>
 
@@ -434,11 +435,11 @@
         android:layout_gravity="bottom|end"
 
         android:layout_margin="16dp"
-        app:menu_fab_size="normal"
         app:layout_behavior="com.example.titomi.workertrackerloginmodule.FloatingActionMenuBehavior"
         app:menu_backgroundColor="@android:color/transparent"
         app:menu_colorNormal="@color/colorPrimaryLight"
         app:menu_fab_label=""
+        app:menu_fab_size="normal"
         app:menu_labels_textColor="@color/colorfabText"
         app:menu_openDirection="up"
         app:menu_showShadow="true">
@@ -450,7 +451,7 @@
             android:overScrollMode="always"
             android:visibility="gone"
             app:fabSize="mini"
-            android:src="@drawable/remove_photo"
+            app:srcCompat="@drawable/remove_photo"
             />
 
         <com.github.clans.fab.FloatingActionButton
@@ -458,7 +459,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:fabSize="mini"
-            android:src="@drawable/ic_photo_camera" />
+            app:srcCompat="@drawable/ic_photo_camera" />
 
 
         <com.github.clans.fab.FloatingActionButton
@@ -466,15 +467,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:fabSize="mini"
-            android:src="@drawable/ic_videocam_white_24dp" />
+            app:srcCompat="@drawable/ic_videocam_white_24dp" />
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fab_record"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             app:fabSize="mini"
-            android:src="@drawable/ic_mic"
-            android:visibility="gone"/>
+            app:srcCompat="@drawable/ic_mic" />
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fab_send"
@@ -482,7 +483,7 @@
             android:layout_height="wrap_content"
             app:fabSize="mini"
 
-            android:src="@drawable/ic_send" />
+            app:srcCompat="@drawable/ic_send" />
     </com.github.clans.fab.FloatingActionMenu>
 
 
