--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -26,7 +26,8 @@
                 android:layout_height="wrap_content"
                 android:clipToPadding="false"
                 android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/product_request"
@@ -36,7 +37,7 @@
                     android:clickable="true"
                     android:focusable="true"
                     android:foreground="?android:attr/selectableItemBackground"
-                    android:visibility="gone">
+                    android:visibility="visible">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -181,11 +182,12 @@
                 android:gravity="center"
                 android:orientation="horizontal">
 
+
                 <android.support.v7.widget.CardView
                     android:id="@+id/sales_report"
                     android:layout_width="match_parent"
                     android:layout_height="190dp"
-                    android:layout_marginStart="10dp">
+                    android:layout_marginStart="7dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
