--- a/app/src/main/res/layout/activity_inventory_report.xml
+++ b/app/src/main/res/layout/activity_inventory_report.xml
@@ -6,11 +6,52 @@
     tools:context="com.example.titomi.workertrackerloginmodule.inventory_module.inventory_sub_menu.InventoryReportActivity"
     android:layout_margin="10dp">
 
-    <com.github.mikephil.charting.charts.BarChart
-        android:id="@+id/barChartInvt"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
 
-        android:layout_marginTop="50dp" />
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/barChartInvt"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+
+            android:layout_marginTop="10dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAllCaps="true"
+            android:text="My Requests"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:id="@+id/requestsText"
+            android:layout_below="@id/barChartInvt" />
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/inventoryRequestList"
+            android:layout_below="@id/requestsText" />
+
+
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/newRequest"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="5dp"
+            app:backgroundTint="@color/colorPrimary"
+            app:srcCompat="@drawable/ic_add_white_24dp"
+            app:rippleColor="@color/colorPrimary"
+
+            android:layout_marginBottom="60dp" />
+
+    </RelativeLayout>
+
 
 </android.support.constraint.ConstraintLayout>
