--- a/app/src/main/res/layout/inventory_fragment.xml
+++ b/app/src/main/res/layout/inventory_fragment.xml
@@ -25,7 +25,58 @@
             android:layout_centerHorizontal="true"
             android:visibility="gone" />
 
+        <TableLayout
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/barChartInvt"
+            android:layout_margin="10dp"
+            android:stretchColumns="1">
 
+            <TableRow>
+
+                <TextView
+                    android:layout_width="18dp"
+                    android:layout_height="wrap_content"
+                    android:background="@color/balanceColor" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:text="Stock Balance"
+                    android:textColor="@color/black" />
+            </TableRow>
+
+            <TableRow>
+
+                <TextView
+                    android:layout_width="18dp"
+                    android:layout_height="wrap_content"
+                    android:background="@color/quantitySoldColor" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:text="Quantity Sold"
+                    android:textColor="@color/black" />
+            </TableRow>
+
+            <TableRow>
+
+                <TextView
+                    android:layout_width="18dp"
+                    android:layout_height="wrap_content"
+                    android:background="@color/quantityColor" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:text="Quantity"
+                    android:textColor="@color/black" />
+            </TableRow>
+        </TableLayout>
     </RelativeLayout>
 
 
