--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -31,17 +31,16 @@
                 app:civ_border_width="2dp" />
 
             <TextView
+                android:id="@+id/userFullname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="5dp"
-
                 android:textColor="#fff"
                 android:textSize="21sp"
-                android:textStyle="bold"
-                android:id="@+id/userFullname"/>
-        </LinearLayout>
+                android:textStyle="bold" />
 
+        </LinearLayout>
 
 
     </RelativeLayout>
@@ -124,24 +123,33 @@
                     android:layout_gravity="center_vertical"
                     android:paddingEnd="10dp"
                     android:paddingStart="20dp"
-
                     android:textStyle="bold" />
-
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/role"
-                android:layout_width="wrap_content"
-                android:layout_height="36dp"
-                android:layout_gravity="center_vertical"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal"
                 android:paddingEnd="10dp"
-                android:paddingStart="30dp"
+                android:paddingStart="25dp">
 
-                android:gravity="center_vertical"
-                android:textStyle="bold"
-                android:drawableStart="@drawable/ic_label_green_24dp"
-                android:drawablePadding="28dp"/>
+                <ImageView
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    app:srcCompat="@drawable/ic_label_green_24dp" />
+
+                <TextView
+                    android:id="@+id/role"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:paddingEnd="20dp"
+                    android:paddingStart="20dp"
+
+                    android:textStyle="bold" />
+            </LinearLayout>
 
             <Button
                 android:id="@+id/editProfile"
@@ -152,7 +160,7 @@
                 android:background="@drawable/buttonstyle"
                 android:text="Edit Profile"
                 android:textColor="#fff"
-                android:visibility="gone"/>
+                android:visibility="gone" />
         </LinearLayout>
     </ScrollView>
 
