worked on sales report

--- a/app/src/main/res/layout/inventory_fragment.xml
+++ b/app/src/main/res/layout/inventory_fragment.xml
@@ -26,7 +26,7 @@
             android:visibility="gone" />
 
         <TableLayout
-            android:layout_width="130dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/barChartInvt"
             android:layout_margin="10dp"
@@ -35,7 +35,7 @@
             <TableRow>
 
                 <TextView
-                    android:layout_width="18dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@color/balanceColor" />
 
@@ -58,7 +58,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
-                    android:text="Quantity Sold"
+                    android:text="Total Quantity Sold"
                     android:textColor="@color/black" />
             </TableRow>
 
@@ -73,7 +73,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
-                    android:text="Quantity"
+                    android:text="Total Inventory"
                     android:textColor="@color/black" />
             </TableRow>
         </TableLayout>
