--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -208,6 +208,7 @@
                 android:layout_marginBottom="10dp"
                 android:text="Quantity Given:"
                 android:textColor="@color/black"
+                android:visibility="gone"
                 android:textSize="12sp" />
 
             <EditText
@@ -217,6 +218,7 @@
                 android:layout_marginBottom="10dp"
                 android:editable="false"
                 android:inputType="none"
+                android:visibility="gone"
                 android:singleLine="true" />
 
 
@@ -447,14 +449,14 @@
             android:overScrollMode="always"
             android:visibility="gone"
             app:fabSize="mini"
-            app:srcCompat="@drawable/remove_photo" />
+            android:src="@drawable/remove_photo" />
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fab_photo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:fabSize="mini"
-            app:srcCompat="@drawable/ic_photo_camera" />
+            android:src="@drawable/ic_photo_camera" />
 
 
         <com.github.clans.fab.FloatingActionButton
@@ -462,7 +464,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:fabSize="mini"
-            app:srcCompat="@drawable/ic_videocam_white_24dp" />
+            android:src="@drawable/ic_videocam_white_24dp" />
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fab_record"
@@ -470,7 +472,7 @@
             android:layout_height="wrap_content"
             android:visibility="visible"
             app:fabSize="mini"
-            app:srcCompat="@drawable/ic_mic" />
+            android:src="@drawable/ic_mic" />
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fab_send"
@@ -478,7 +480,7 @@
             android:layout_height="wrap_content"
             app:fabSize="mini"
 
-            app:srcCompat="@drawable/ic_send" />
+            android:src="@drawable/ic_send" />
     </com.github.clans.fab.FloatingActionMenu>
 
 
