--- a/app/src/main/res/layout/activity_view_report_layout.xml
+++ b/app/src/main/res/layout/activity_view_report_layout.xml
@@ -443,6 +443,18 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="Play Video"
+                    android:textColor="@color/black"
+                    android:textSize="12sp"
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/videoText"
+                    android:drawableStart="@drawable/ic_play_arrow_black_24dp"
+                    android:gravity="center_vertical"
+                    android:layout_marginStart="10dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="Comment"
                     android:textColor="@color/black"
                     android:textSize="12sp"
@@ -485,6 +497,7 @@
                         android:gravity="center_vertical"
                         android:drawablePadding="5dp"
                         android:text="Approve"
+                        android:layout_marginEnd="10dp"
                         android:textColor="@color/colorPrimary" />
 
                 </RelativeLayout>
