--- a/app/src/main/res/layout-v21/task_listing_single_item_layout.xml
+++ b/app/src/main/res/layout-v21/task_listing_single_item_layout.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+
 <android.support.v7.widget.CardView android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
+    android:elevation="@dimen/cardview_default_elevation"
     app:cardCornerRadius="5dp"
     android:layout_marginTop="10dp"
-
     xmlns:android="http://schemas.android.com/apk/res/android">
 
         <LinearLayout
@@ -30,7 +30,6 @@
                     android:textColor="@color/colorPrimary"
                     android:textSize="14sp"
                     android:textStyle="bold"
-                    android:id="@+id/taskText"
                     android:layout_alignParentStart="true"
                     />
 
@@ -190,7 +189,7 @@
                 android:orientation="horizontal"
                 android:paddingTop="5dp"
                 android:background="@drawable/line"
-
+                android:backgroundTint="@color/white"
                 android:visibility="gone">
 
                 <TextView
@@ -273,3 +272,4 @@
                 android:gravity="end"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
+
