--- a/app/src/main/res/layout/activity_assign_task.xml
+++ b/app/src/main/res/layout/activity_assign_task.xml
@@ -99,21 +99,7 @@
                 android:inputType="textCapSentences|textMultiLine"
                 android:singleLine="true" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:text="Institution Name:"
-                android:textColor="@color/black"
-                android:textSize="12sp" />
 
-            <EditText
-                android:id="@+id/institution"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:inputType="textCapWords"
-                android:singleLine="true" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -126,6 +112,7 @@
                     android:layout_marginBottom="10dp"
                     android:layout_marginEnd="10dp"
                     android:text="@string/location"
+                    android:id="@+id/locationLabel"
                     android:textColor="@color/black"
                     android:textSize="12sp" />
 
@@ -153,6 +140,21 @@
                 android:inputType=""
 
                 android:singleLine="true" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="Institution Name:"
+                android:textColor="@color/black"
+                android:textSize="12sp" />
+
+            <EditText
+                android:id="@+id/institution"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:inputType="textCapWords"
+                android:singleLine="true" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -160,6 +162,7 @@
                 android:layout_marginBottom="10dp"
                 android:text="Full Address:"
                 android:textColor="@color/black"
+                android:id="@+id/fullAddressLabel"
                 android:textSize="12sp" />
 
             <EditText
