--- a/app/src/main/res/layout/report_images_single_item.xml
+++ b/app/src/main/res/layout/report_images_single_item.xml
@@ -10,18 +10,35 @@
 
         android:background="@color/colorPrimary"
         >
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/gray"
             android:padding="5dp"
             >
+
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:id="@+id/reportImage"
                 />
-        </LinearLayout>
+            <FrameLayout
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:id="@+id/loadingImageFrame"
+                android:visibility="gone"
+                android:background="@color/black_overlay"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Loading.."
+                    android:textColor="@color/white"
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center"
+                    />
+            </FrameLayout>
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 </LinearLayout>
